[gd_scene load_steps=4 format=3 uid="uid://dc3fk4sa7ey5n"]

[ext_resource type="Texture2D" uid="uid://dhrae742js6r1" path="res://assets/Ui/Dialog/FacesetBox.png" id="1_58dws"]
[ext_resource type="Theme" uid="uid://btuhhapqa0pas" path="res://resource/theme/game_theme.tres" id="1_q4bi8"]
[ext_resource type="Script" uid="uid://d3d80wbxb7d53" path="res://ui/inventory_item_cell.gd" id="2_m5mkn"]

[node name="InventoryItemCell" type="VBoxContainer"]
custom_minimum_size = Vector2(64, 80)
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_q4bi8")
script = ExtResource("2_m5mkn")

[node name="Container" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("1_58dws")

[node name="TextureRect" type="TextureRect" parent="Container"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="lbStack" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -26.0
offset_right = -7.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0

[node name="MenuButton" type="MenuButton" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="Container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"SelectedButton"

[node name="lbName" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[connection signal="pressed" from="Container/Button" to="." method="_on_button_pressed"]
